--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ var voxpad= new Tone.Part(function(time, chord){
 
 
 function start() {
-  Tone.Transport.start();
+  Tone.Transport.start(1);
 }
 
 function stop() {
